Deprecate Hamcrest use in WebTestClient
Closes gh-35703